--- a/views/pages/addservicesPage.handlebars
+++ b/views/pages/addservicesPage.handlebars
@@ -211,7 +211,7 @@
       <div class="main-feature" >
           <div class="heading-container">
               <h1>Popular Premium Packages Offer Something for<span style="color: #069bd9;"> Everyone </span></h1>
-              <p>Access to these upgrades requires a Basic subscription.  
+              <p>Access to these upgrades requires a Preferred subscription.  
                   These member can select one or more options based on their interests.</p>
           </div>
           {{#if data}}
@@ -228,7 +228,7 @@
                       </span>
                   </span>
                   <h2 class="title">{{data.sports.Name}}</h2>
-                  <p class="info">This is the upgrade plan for those who have a basic plan already running.</p>
+                  <p class="info">This is the upgrade plan for those who have a Preferred plan already selected.</p>
                   <ul class="features">
                       <li>
                           <span class="icon">
@@ -246,7 +246,7 @@
                                   <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                               </svg>
                           </span>
-                           <span>Combined with the Preferred Plan overs the ultimate in sports programming</span>
+                           <span>Combined with the Preferred Plan offers the ultimate in sports programming</span>
                       </li>
                      
                       <li>
@@ -265,7 +265,7 @@
                                   <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                               </svg>
                           </span>
-                          <span>Record via PVR and also enjoy Replay TV for all your shows so you don't miss anything.</span>
+                          <span>Record via PVR and also enjoy Replay TV for all your sports shows so you don't miss anything.</span>
                       </li>
                   </ul>
                   {{#if data.sports.purchased}}
@@ -286,7 +286,7 @@
                       </span>
                   </span>
                   <h2 class="title">{{data.hbo.Name}}</h2>
-                  <p class="info">This is the upgrade plan for those who have a basic plan already running.</p>
+                  <p class="info">This is the upgrade plan for those who have a Preferred plan already selected.</p>
                   <ul class="features">
                       <li>
                           <span class="icon">
@@ -353,7 +353,7 @@
                       </span>
                   </span>
                   <h2 class="title">{{data.spanish.Name}}</h2>
-                  <p class="info">This is the upgrade plan for those who have a basic plan already running.</p>
+                  <p class="info">This is the upgrade plan for those who have a Preferred plan already selected.</p>
                   <ul class="features">
                       <li class="sub-li">
                           <span class="icon">
