--- a/views/pages/cablePage.handlebars
+++ b/views/pages/cablePage.handlebars
@@ -347,7 +347,7 @@
                         </span>
                     </span>
                     <h2 class="title">{{data.sports.Name}}</h2>
-                    <p class="info">This is the upgrade plan for those who have a preferred plan already running.</p>
+                    <p class="info">This is the upgrade plan for those who have a Preferred plan already selected.</p>
                     <ul class="features">
                         <li>
                             <span class="icon">
@@ -365,7 +365,7 @@
                                     <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                                 </svg>
                             </span>
-                            <span>Combined with the Preferred Plan overs the ultimate in sports programming</span>
+                            <span>Combined with the Preferred Plan offers the ultimate in sports programming</span>
                         </li>
                        
                         <li>
@@ -384,7 +384,7 @@
                                     <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                                 </svg>
                             </span>
-                            <span>Record via PVR and also enjoy Replay TV for all your shows so you don't miss anything.</span>
+                            <span>Record via PVR and also enjoy Replay TV for all your sports shows so you don't miss anything.</span>
                         </li>
                     </ul>
                     <button class="button Sports" onclick="location.href='/service';">
@@ -403,7 +403,7 @@
                         </span>
                     </span>
                     <h2 class="title">{{data.hbo.Name}}</h2>
-                    <p class="info">This is the upgrade plan for those who have a preferred plan already running.</p>
+                    <p class="info">This is the upgrade plan for those who have a Preferred plan already selected.</p>
                     <ul class="features">
                         <li>
                             <span class="icon">
@@ -459,7 +459,7 @@
                         </span>
                     </span>
                     <h2 class="title">{{data.spanish.Name}}</h2>
-                    <p class="info">This is the upgrade plan for those who have a preferred plan already running.</p>
+                    <p class="info">This is the upgrade plan for those who have a Preferred plan already selected.</p>
                     <ul class="features">
                         <li>
                             <span class="icon">
