--- a/views/pages/compareplansPage.handlebars
+++ b/views/pages/compareplansPage.handlebars
@@ -15,19 +15,27 @@
         <div class="pricing">
             <div class="pricing-option lifeline">
                 <p class="plan">OP Basic</p>
-                <p><span class="old-price">$80/mo</span> <span class="new-price">$59.95</span></p>
+                <p>
+                    {{!-- <span class="old-price">$80/mo</span>  --}}
+                    <span class="new-price">$25.11</span></p>
             </div>
             <div class="pricing-option lifeline">
                 <p class="plan">Choice</p>
-                <p><span class="old-price">$80/mo</span> <span class="new-price">$59.95</span></p>
+                <p>
+                    {{!-- <span class="old-price">$80/mo</span>  --}}
+                    <span class="new-price">$69.04</span></p>
             </div>
             <div class="pricing-option basic">
                 <p class="plan">Preferred</p>
-                <p><span class="old-price">$100/mo</span> <span class="new-price">$79.95</span></p>
+                <p>
+                    {{!-- <span class="old-price">$100/mo</span>  --}}
+                    <span class="new-price">$87.69</span></p>
             </div>
             <div class="pricing-option basic">
                 <p class="plan">Expanded</p>
-                <p><span class="old-price">+$30/mo</span> <span class="new-price">+$20.95</span></p>
+                <p>
+                    {{!-- <span class="old-price">+$30/mo</span> --}}
+                     <span class="new-price">$23.95</span></p>
             </div>
         </div>
 
@@ -86,6 +94,7 @@
 
         <div class="channel-table">
             <div class="channel-header">
+         
                 <p>Only on Xstream TV Stream
 
                     <a href=".../../public/images/channel.pdf" class="button" download style="color: #fff;"><i class="fa fa-download"></i></a>
@@ -138,13 +147,14 @@
               
 
        
-    
-              
-            
-               
-            
-    
-        </div>
+
+           
+<div class="topnav">
+  <a class="active" href="/compareplans">Compare Plans</a>
+  <a href="/">Home</a>
+  <a href="/register">Get Started</a>
+  <a href="/cable">Cable</a>
+</div>
         
         
     </section>
