--- a/views/pages/homePage.handlebars
+++ b/views/pages/homePage.handlebars
@@ -106,7 +106,7 @@
                 <h1 class="platform-title">Ultimate Entertainment<span style="color: #ffa039;"> TV Viewing</span> Experience​</h1>
                 
                 <h6 class="subheading-title">Our in-home streaming technology delivers lightning-fast speeds, crystal-clear pictures, 
-                    and reliable service so you can enjoy the best a vast selection of channels can provide.​</h6>
+                    and reliable service so you can enjoy the best and vast selection of channels can provide.​</h6>
                     <a href="/cable" class="feature-card-btn">Explore Cable</a>
                 <a href="#home" class="button-secondary">Home</a>
                 </div>
