--- a/public/css/cable.css
+++ b/public/css/cable.css
@@ -101,7 +101,8 @@ text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 1px;
   text-align: center; 
-  color: #605d5d;
+  /* color: #605d5d; */
+  color: #fff;
   margin-bottom: 10px;
 }
 .service{
