--- a/public/css/phone.css
+++ b/public/css/phone.css
@@ -54,7 +54,8 @@ body {
     font-weight: bold;
     letter-spacing: 1px;
     text-align: center; 
-    color: #605d5d;
+    /* color: #605d5d; */
+    color: #fff;
     margin-bottom: 10px;
 }
 
@@ -207,3 +208,121 @@ body {
       }
   }
   
+  .card-containers {
+    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    flex-wrap: wrap; /* Makes it responsive */
+  }
+  
+  /* Card Styles */
+  .cards {
+    /* background: #fff; */
+    background: linear-gradient(71deg, #080509, #1a171c, #080509);
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    width: 500px;
+    height: 420px;;
+    padding: 2%;
+    text-align: left;
+    transition: transform 0.3s ease;
+  }
+  
+  .cards:hover {
+    transform: translateY(-5px);
+  }
+  
+  .cards-title {
+    margin-top: 5%;
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #fff;
+  }
+  
+  .cards-content p {
+    font-size: 22px;
+    line-height: 1.6;
+    color: #666;
+    margin-bottom: 20px;
+  }
+  
+  /* Speed Options */
+  .speed-options {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+  }
+  
+  .speed-options button {
+    background: #0694bd;
+    color: white;
+    border: none;
+    padding: 10px;
+    position:relative;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    border-radius: 5px;
+    font-size: 20px;
+  
+    
+  }
+  
+  .speed-options button:hover {
+    background: #0e5491;
+  
+  }
+  
+  /* Initially hide the label */
+  .plan-label {
+  display: none;
+  font-size: 20px;
+  color: #fff;
+  margin-left: 10px;
+  }
+  
+  /* Show the label when hovering over the button */
+  button:hover .plan-label {
+  display: inline;
+  }
+  
+  
+  
+  /* Optional: Style the radio button */
+  input[type="radio"] {
+  margin-right: 5px;
+  }
+  
+  /* Primary Button */
+  .primary-button {
+    margin-top: 5%;
+    background: #ffa039;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: 500;
+    width: 100%;
+    transition: background 0.3s ease;
+  }
+  
+  .primary-button:hover {
+    background: #a5620e;
+    transform: scale(1.1);
+  }
+  
+  /* Responsive Styles */
+  @media (max-width: 768px) {
+    .card-containers {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .cards {
+        width: 100%;
+        max-width: 400px;
+      }
+  }
