--- a/views/pages/internetPage.handlebars
+++ b/views/pages/internetPage.handlebars
@@ -16,14 +16,14 @@
                                 <div class="container-card bg-orange-box">
                                     <i class="fa-solid fa-trophy"></i>
                                     <p class="card-title">Enjoy Effortless Browsing</p>
-                                    <p class="card-description">Enjoy all that the Internet has to offer, seamlessly and uninterrupted streaming of all your favorite content.</p>
+                                    <p class="card-description">Enjoy all that the Internet has to offer, seamless and uninterrupted streaming of all your favorite content.</p>
                                      <a href="/service" class="feature-card-btn">Get Started</a>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="container-card bg-orange-box">
                                     <i class="fas fa-wifi"></i>
-                                    <p class="card-title">High-Speed Internet to All Your Favorites</p>
+                                    <p class="card-title">High-Speed Internet to All Your Devices</p>
                                     <p class="card-description">The very best in Internet service either direct wired or wirelessly throughout your home without dead spots.</p>
                                     <a href="/service" class="feature-card-btn">Get Started</a>
                                 </div>
@@ -48,7 +48,102 @@
         
     </section>
     
-
+<section class="features" >
+        
+        <div class="main-feature" >
+            
+            <div class="heading-container">
+                <h1>Xstream <span style="color: #ffa039;">Internet & phone</span></h1>
+                <p>Affordable plans for up to 100MB/s plus unlimited calls to the US, Canada, and Puerto Rico</p>
+            </div>
+                
+            <div class="card-containers">
+                <!-- Internet Plan Card -->
+                <div class="cards">
+                  <h3 class="cards-title">Add Lightning-Fast Internet</h3>
+                  <div class="cards-content">
+                    <p>
+                      Our lightweight technology makes the most of every MB. Choose from flexible internet plans that suit your needs!
+                    </p>
+                    {{#if internet}}
+                    <div class="speed-options">
+                        {{#each internet.data}}
+                       {{#if thispurchased}}
+                        <button>
+                            <input type="radio" name="internet" checked class="internet-plans" id={{_id}}>
+                            {{Name}}
+                            <label for="plan1" class="plan-label">${{Price}}/mo</label>
+                        </button>
+                        {{else}}
+                        <button>
+                            <input type="radio" name="internet"  class="internet-plans" id={{_id}}>
+                            {{Name}}
+                            <label for="plan1" class="plan-label">${{Price}}/mo</label>
+                        </button>
+                        {{/if}}
+                      {{/each}}
+                      <!-- <button><input type="radio" name="internet" id="plan2">50 MB</button>
+                      <button><input type="radio" name="internet" id="plan3">100 MB</button> -->
+                    </div>
+                    {{/if}}
+                    <!-- <ul class="price-options">
+                      <li><input type="radio" name="internet" id="plan1"><label for="plan1">25 MB - $41.95/mo</label></li>
+                      <li><input type="radio" name="internet" id="plan2"><label for="plan2">50 MB - $61.95/mo</label></li>
+                      <li><input type="radio" name="internet" id="plan3"><label for="plan3">100 MB - $91.95/mo</label></li>
+                    </ul> -->
+                    {{#if internet.purchased}}
+                         <button class="primary-button" id="internetbtn">Remove Internet</button>
+                    {{else}}
+                       <button class="primary-button" id="internetbtn">Add Internet</button>
+                    {{/if}}
+                    
+                  </div>
+                </div>
+          
+                <!-- Phone Plan Card -->
+                <div class="cards">
+                  <h3 class="cards-title">Add Crystal-Clear Calls</h3>
+                  <div class="cards-content">
+                    <p>
+                      Add a phone line. Includes free calls to the US, Canada, and Puerto Rico.
+                    </p>
+                    {{#if phone}}
+                    <div class="speed-options">
+                        {{#each phone.data}}
+                        {{#if thispurchased}}
+                      <button>
+                        <input type="radio" checked name="phone" id={{_id}}>
+                        {{Name}}
+                        <label for="plan1" class="plan-label">${{Price}}/mo</label>
+                      </button>
+                      {{else}}
+                      <button>
+                        <input type="radio" name="phone" id={{_id}}>
+                        {{Name}}
+                        <label for="plan1" class="plan-label">${{Price}}/mo</label>
+                      </button>
+                      {{/if}}
+                      {{/each}}
+                      <!-- <button><input type="radio" name="internet" id="plan2">50 MB</button>
+                      <button><input type="radio" name="internet" id="plan3">100 MB</button> -->
+                    </div>
+                    {{/if}}
+                    <!-- <img src="images/icons8-voip.svg" alt="Phone Icon" class="icon"> -->
+                        {{#if phone.purchased}}
+                         <button class="primary-button" style="margin-top: 20%!important;" id="phonebtn">Remove Phone</button>
+                        {{else}}
+                       <button class="primary-button" style="margin-top: 20%!important;" id="phonebtn">Add Phone</button>
+                        {{/if}}
+                   
+                  </div>
+                </div>
+              </div>
+            
+    
+        </div>
+        
+        
+    </section>
 
     
 
