--- a/public/css/phone.css
+++ b/public/css/phone.css
@@ -244,7 +244,8 @@ body {
   .cards-content p {
     font-size: 22px;
     line-height: 1.6;
-    color: #666;
+    /* color: #666; */
+    color: #fff;
     margin-bottom: 20px;
   }
   
