--- a/views/pages/cablePage.handlebars
+++ b/views/pages/cablePage.handlebars
@@ -277,7 +277,7 @@
             <div class="heading-container">
                 <h1>Popular Premium Packages Offer Something for<span style="color: #069bd9;"> Everyone </span></h1>
                 <p>Access to these upgrades requires a Preferred subscription.  
-                    These member can select one or more options based on their interests.</p>
+                    These members can select one or more options based on their interests.</p>
             </div>
             {{#if data}}
             <div class="gradient-cards2">
