--- a/public/css/phone.css
+++ b/public/css/phone.css
@@ -252,7 +252,8 @@ body {
   /* Speed Options */
   .speed-options {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    flex-direction: row;
     margin-bottom: 15px;
   }
   
@@ -285,7 +286,7 @@ body {
   
   /* Show the label when hovering over the button */
   button:hover .plan-label {
-  display: inline;
+  display: block;
   }
   
   
@@ -321,9 +322,28 @@ body {
       flex-direction: column;
       align-items: center;
     }
-  
+  .cards-content{
+    padding: 8%;
+  }
+  .cards-title{
+    padding-left: 8%;
+    padding-right: 8%;
+  }
     .cards {
         width: 100%;
         max-width: 400px;
+        height: auto;
+        padding-bottom: 8%;
+      }
+      .speed-options {
+        
+        flex-direction: column;
+        justify-content: center;
+      }
+      .speed-options button{
+        margin-top: 10px;
+        margin-bottom: 10px;
+        width: 60%;
+        margin-left: 15%;
       }
   }
