Phone and internet page changes

--- a/views/pages/phonePage.handlebars
+++ b/views/pages/phonePage.handlebars
@@ -18,7 +18,7 @@
                                     <i class="fa-solid fa-trophy"></i>
                                     <p class="card-title">Perfect clarity on every call every time without blackouts</p>
                                     <p class="card-description">Our Internet based VOIP home phone service guarantees you can communicate and stay connected seamlessly even during severe weather conditions, emergency community events, blackouts or mobile phone disruptions.</p>
-                                    <a href="/service" class="feature-card-btn">Get Started</a>
+                                    <a href="/service" class="feature-card-btn">Compare Plans</a>
                                 </div>
                             </div>
                             <div class="card">
@@ -26,7 +26,7 @@
                                     <i class="fas fa-phone"></i>
                                     <p class="card-title">Stay Connected</p>
                                     <p class="card-description">Make and receive calls day or night, you're never alone and you're never out of touch. Make any long distance calls anywhere in the Continental USA or its territories and also make calls to Canada in Mexico for free and talk as long as you like with perfect clarity. Long distance international calling is also available at preferred rates.</p>
-                                    <a href="/service" class="feature-card-btn">Get Started</a>
+                                    <a href="/service" class="feature-card-btn">Compare Plans</a>
                                 </div>
                             </div>
                             <div class="card">
@@ -34,7 +34,7 @@
                                     <i class="fa-solid fa-piggy-bank"></i>
                                     <p class="card-title">Seamless Calls. Better Savings</p>
                                     <p class="card-description">Crystal Clear reception from your home based phone, guarantees you'll never be out of touch again and ensures your loved one's can reach you when cell phone service is disrupted. Call 911 anytime and always.</p>
-                                    <a href="/service" class="feature-card-btn">Get Started</a>
+                                    <a href="/service" class="feature-card-btn">Compare Plans</a>
                                 </div>
                             </div>
                  
@@ -49,7 +49,7 @@
         
     </section>
     
-<section class="features" >
+{{!-- <section class="features" >
         
         <div class="main-feature" >
             
@@ -144,7 +144,7 @@
         </div>
         
         
-    </section>
+    </section> --}}
 
     
 
