--- a/views/pages/internetPage.handlebars
+++ b/views/pages/internetPage.handlebars
@@ -17,7 +17,7 @@
                                     <i class="fa-solid fa-trophy"></i>
                                     <p class="card-title">Enjoy Effortless Browsing</p>
                                     <p class="card-description">Enjoy all that the Internet has to offer, seamless and uninterrupted streaming of all your favorite content.</p>
-                                     <a href="/service" class="feature-card-btn">Get Started</a>
+                                     <a href="/service" class="feature-card-btn">Compare Plans</a>
                                 </div>
                             </div>
                             <div class="card">
@@ -25,7 +25,7 @@
                                     <i class="fas fa-wifi"></i>
                                     <p class="card-title">High-Speed Internet to All Your Devices</p>
                                     <p class="card-description">The very best in Internet service either direct wired or wirelessly throughout your home without dead spots.</p>
-                                    <a href="/service" class="feature-card-btn">Get Started</a>
+                                    <a href="/service" class="feature-card-btn">Compare Plans</a>
                                 </div>
                             </div>
                             <div class="card">
@@ -33,7 +33,7 @@
                                     <i class="fa-solid fa-piggy-bank"></i>
                                     <p class="card-title">Uninterrupted Performance. Better Savings</p>
                                     <p class="card-description"> A stable and robust Internet service ensures the best in performance and is superior to all satellite, traditional telephone or cellular based internet service plans and at a very competitive price.</p>
-                                    <a href="/service" class="feature-card-btn">Get Started</a>
+                                    <a href="/service" class="feature-card-btn">Compare Plans</a>
                                 </div>
                             </div>
                  
@@ -48,7 +48,7 @@
         
     </section>
     
-<section class="features" >
+{{!-- <section class="features" >
         
         <div class="main-feature" >
             
@@ -143,7 +143,7 @@
         </div>
         
         
-    </section>
+    </section> --}}
 
     
 
