--- a/views/pages/compareplansPage.handlebars
+++ b/views/pages/compareplansPage.handlebars
@@ -4,8 +4,8 @@
             <div class="heading-container">
                 <h1>XSTream <span style="color: #ffa039;">Cable Channels</span></h1>
                 <p>Provides an overview of the channels offered by Xstream. Not all channels are accessible to all.
-                    The chart below helps to identify which are available in each plan.  <span style="color: #ffa039;">Please note.</span> Only Preferred and Expanded subscribers have the option to upgrade their package with one or more of our premium(eg:HBO). 
-                    This is not available to our OP Basic subscribers.</p>
+                    The chart below helps to identify which are available in each plan.  <span style="color: #ffa039;">Please note.</span> Only Preferred subscribers have the option to upgrade their package with one or more of our Add-On Plans(eg:Expanded,HBO-Premium, & Sports). 
+                    </p>
             </div>
             
         
@@ -65,18 +65,18 @@
                 <!-- Preferred Plan with Choice Plan inside -->
                 <div class="plan plan-preferred">
                     <div class="plan-title">Preferred Plan</div>
-                    <div class="plan plan-choice">
+                    {{!-- <div class="plan plan-choice">
                         <div class="plan-title">Choice Plan</div>
-                    </div>
+                    </div> --}}
                     <button class="add-premium-button">Add Premium</button>
                 </div>
     
                 <!-- Expanded Plan with Choice and Preferred Plans inside -->
                 <div class="plan plan-expanded">
                     <div class="plan-title">Expanded Plan</div>
-                    <div class="plan plan-choice">
+                    {{!-- <div class="plan plan-choice">
                         <div class="plan-title">Choice Plan</div>
-                    </div>
+                    </div> --}}
                     <div class="plan plan-preferred">
                         <div class="plan-title">Preferred Plan</div>
                     </div>
@@ -86,7 +86,7 @@
             </div>
     
             <div class="premium-note">
-                <span>Note:</span> Premium Plan can only be added to the Preferred or Expanded Plan.
+                <span>Note:</span> Add-On Plans can only be added to the Preferred Plan.
             </div>
         </div>
 
@@ -95,7 +95,7 @@
         <div class="channel-table">
             <div class="channel-header">
          
-                <p>Only on Xstream TV Stream
+                <p>Xstream Channel Line-Ups
 
                     <a href=".../../public/images/channel.pdf" class="button" download style="color: #fff;"><i class="fa fa-download"></i></a>
                 </p>
