--- a/public/css/cable.css
+++ b/public/css/cable.css
@@ -386,21 +386,20 @@ text-transform: uppercase;
   overflow-y: auto; /* Enable scroll if content exceeds expanded height */
 }
 .read-more-btn {
-  margin-top: 15%;
+  /* margin-top: 15%; */
   background-color: #ffa039;
   color: white;
   border: none;
-  padding: 8px 16px;
+  /* padding: 8px 16px; */
   border-radius: 4px;
   cursor: pointer;
   font-weight: bold;
   cursor: pointer;
-  line-height: 36px;
-  height: 40px;
-  line-height: 40px;
+  height: 20px;
+  /* line-height: 40px; */
   padding: 0 17px;
-  font-size: 18px;
-  font-weight: 700;
+  font-size: 10px;
+  /* font-weight: 700; */
   text-decoration: none;
   display: inline-block;
   text-align: center;
